<resources>
    <string name="app_name">SPedometer</string>
    <string name="appLaunch_imageView_contentDescription" translatable="false">this is smart sport pedometer application launch imageView</string>
    <string name="ssb_navBar_barBtnItem_imageBtn_contentDescription" translatable="false">this is smart sport base activity navigation bar bar button item imageButton</string>
    <string name="ssulf_userLoginFormItem_label_imageView_contentDescription" translatable="false">this is smart sport user login form item label icon imageView</string>
    <string name="title_activity_userAccount_setting" translatable="false">UserAccountSettingActivity</string>
    <string name="appVersion_format" translatable="false">v%s</string>
    <string name="appLogo_imageView_contentDescription" translatable="false">this is smart sport pedometer logo imageView</string>
    <string name="userLogin_loginName_userInputEditText_hint">用户名</string>
    <string name="userLogin_loginPwd_userInputEditText_hint">密码</string>
    <string name="userLogin_button_text">登录</string>
    <string name="myNanjingUser_button_text">我的南京登录</string>
    <string name="anonymousTry_textView_text">瞧一瞧</string>
    <string name="newUserRigister_textView_text">新用户</string>
    <string name="userForgetPwd_textView_text">忘记密码</string>
    <string name="userGender_male_label">帅哥</string>
    <string name="userGender_female_label">美女</string>
    <string name="userGender_unknown_label">保密</string>
    <string name="sspd_progress_tip">正在处理，请稍候&#8230;</string>
    <string name="ssad_icon_imageView_contentDescription" translatable="false">this is smart sport alert dialog icon imageView</string>
    <string name="ssad_default_title_tip">享走路提示</string>
    <string name="ssad_neutral_button_text">好的</string>
    <string name="title_activity_pedometer" translatable="false">PedometerActivity</string>
    <string name="pedometer_activity_title">计步器</string>
    <string name="personalPedometer_button_text">个人计步器</string>
    <string name="walkInvite_button_text">约走</string>
    <string name="withinGroupCompete_button_text">组内竞赛</string>
    <string name="nearbyStrangers_button_text">附近的人</string>
    <string name="historyRecord_button_text">历史记录</string>
    <string name="title_activity_personalPedometer" translatable="false">PersonalPedometerActivity</string>
    <string name="personalPedometer_activity_title">我的计步器</string>
    <string name="cancel_walk_barbtnitem_title">关闭</string>
    <string name="walkPath_gpsStatus_imageView_contentDescription" translatable="false">this is walk path gps status imageView</string>
    <string name="walkPath_gps_status">GPS信号：</string>
    <string name="walkPath_location_gps_searching">GPS搜索中&#8230;</string>
    <string name="walkInfo_sensor_imitate">正在使用传感器记录运动</string>
    <string name="walkInfo_sensor_imitate_deviceHoldingPosture">请注意设备手持姿势</string>
    <string name="walkInfo_walkDurationTime_format" formatted="false" translatable="false">%02d\'%02d\"</string>
    <string name="walkInfo_distance_unit">公里</string>
    <string name="walkInfo_distance_value_format">%.2f</string>
    <string name="walkInfo_step_unit">步</string>
    <string name="walkInfo_energy_unit">大卡</string>
    <string name="walkInfo_energy_value_format">%.1f</string>
    <string name="walkInfo_pace_label">配速\n</string>
    <string name="walkInfo_pace_unit">/公里</string>
    <string name="walkInfo_speed_label">速度\n</string>
    <string name="walkInfo_speed_unit">公里/小时</string>
    <string name="walkInfo_speed_value_format">%.2f</string>
    <string name="walkStart_button_text">开始</string>
    <string name="walkStop_button_text">结束</string>
    <string name="walkRecord_save_alertDialog_message">您需要保存此次运动记录嘛？</string>
    <string name="walkRecord_save_alertDialog_positiveBtn_text">保存</string>
    <string name="walkRecord_save_alertDialog_negativeBtn_text">放弃</string>
    <string name="title_activity_personalWalkResult" translatable="false">PersonalWalkResultActivity</string>
    <string name="personal_walkResult_title">计步结果</string>
    <string name="cancel_share_walkResult_barbtnitem_title">关闭</string>
    <string name="title_activity_userinfo_setting" translatable="false">UserInfoSettingActivity</string>
    <string name="userInfo_setting_activity_title">个人信息</string>
    <string name="userInfo_label_suffix">：</string>
    <string name="userStepLength_label_textView_text">步长：</string>
    <string name="userStepLength_unit">厘米</string>
    <string name="userStepLength_notSet">未设置</string>
    <string name="userStepLength_indicator_imageView_contentDescription" translatable="false">this is user step length calculate item imageView</string>
    <string name="userStepLength_autoCalculate_text">自动</string>
    <string name="userStepLength_manualCalculate_text">手动</string>
    <string name="userInfoItem_indicator_imageView_contentDescription" translatable="false">this is user info item setting imageView</string>
    <string name="userInfoItem_notSet">未设置</string>
    <string name="userInfo_gender_label">性别：</string>
    <string name="userInfo_age_label">年龄：</string>
    <string name="userAge_unit">岁</string>
    <string name="userInfo_height_label">身高：</string>
    <string name="userHeight_unit">厘米</string>
    <string name="userInfo_weight_label">体重：</string>
    <string name="userWeight_unit">公斤</string>
    <string name="title_activity_userinfo_item_editor" translatable="false">UserInfoItemEditorActivity</string>
    <string name="save_editorUserInfo_barbtnitem_title">保存</string>
    <string name="userAge_editor_displayTextView_text_format">您的年龄为 %d 岁</string>
    <string name="long_dateFormat" translatable="false">yy-MM-dd HH:mm</string>
    <string name="short_dateFormat" translatable="false">HH:mm</string>
    <string name="title_activity_schedule_walkInvite_groups" translatable="false">ScheduleWalkInviteGroupsActivity</string>
    <string name="scheduleWalkInviteGroups_activity_title">约走组</string>
    <string name="walkOrWithinGroupCompete_inviteInfo_label_suffix">：</string>
    <string name="walkOrWithinGroupCompete_inviteInfoItem_indicator_imageView_contentDescription" translatable="false">this is walk or within group compete invite info item setting imageView</string>
    <string name="walkOrWithinGroupCompete_inviteInfo_topic_textView_hint">邀请好友一起走走吧&#8230;</string>
    <string name="title_activity_groupInviteInfo_item_editor" translatable="false">GroupInviteInfoItemEditorActivity</string>
    <string name="save_editorGroupInviteInfo_barbtnitem_title">保存</string>
    <string name="scheduleWalkInviteGroupItem_indicator_imageView_contentDescription" translatable="false">this is schedule walk invite group item setting imageView</string>
    <string name="scheduleWalkInviteGroup_topic_label">主题：</string>
    <string name="scheduleWalkInviteGroup_scheduleTime_label">约走时间：</string>
    <string name="scheduleWalkInviteGroup_scheduleTime_format" formatted="false">%s ~ %s</string>
    <string name="scheduleWalkInviteGroup_status_label">状态：</string>
    <string name="scheduleWalkInviteGroup_status_walking">进行中&#8230;</string>
    <string name="scheduleWalkInviteGroup_status_startSoon">即将开始</string>
    <string name="scheduleWalkInviteGroup_status_startReaminTime_format">%s后开始</string>
    <string name="scheduleWalkInviteGroup_status_startReaminTime_day_unit">天</string>
    <string name="scheduleWalkInviteGroup_status_startReaminTime_hour_unit">小时</string>
    <string name="scheduleWalkInviteGroup_status_startReaminTime_minute_unit">分钟</string>
    <string name="scheduleWalkInviteGroup_status_invalid">已失效</string>
    <string name="withinGroupCompeteInviteInviteeSelectItem_selectState_imageView_contentDescription" translatable="false">this is within group compete invite invitee select item select state imageView</string>
    <string name="walkOrWithinGroupCompeteInviteInviteeSelectItem_friendAvatar_imageView_contentDescription" translatable="false">this is walk or within group compete invite invitee select item user friend avatar imageView</string>
    <string name="title_activity_group_walkResult" translatable="false">GroupWalkResultActivity</string>
    <string name="walkInvite_walkResult_title">约走结果</string>
    <string name="withinGroupCompete_walkResult_title">组内竞赛结果</string>
    <string name="title_activity_walkInvite_invitee_select" translatable="false">WalkInviteInviteeSelectActivity</string>
    <string name="cancel_selectWalkInviteInvitee_barbtnitem_title">取消</string>
    <string name="walkInviteInviteeSelect_activity_title">选择约走对象</string>
    <string name="title_activity_walkInviteInfo_setting" translatable="false">WalkInviteInfoSettingActivity</string>
    <string name="walkInviteInfoSetting_activity_title">安排约走</string>
    <string name="walkInvite_attendeeAvatar_imageView_contentDescription" translatable="false">this is walk invite attendee avatar imageView</string>
    <string name="walkInvite_inviterNickname">我</string>
    <string name="walkInvite_attendeePK_imageView_contentDescription" translatable="false">this is walk invite attendee pk imageView</string>
    <string name="walk_inviteInfo_topic_label">约走主题：</string>
    <string name="walk_inviteInfo_scheduleTime_label">约走时间：</string>
    <string name="walk_inviteInfo_scheduleTime_textView_hint">给好友一个邀约走走的时间吧!</string>
    <string name="walk_inviteInfo_scheduleTime_beginTimeDuration_splitWord" translatable="false">||</string>
    <string name="walk_inviteInfo_scheduleTime_format" formatted="false">您选择的约走时间为：%s ~ %s</string>
    <string name="title_activity_walkInvite_walk" translatable="false">WalkInviteWalkActivity</string>
    <string name="walkInvite_watchWalkAttendeeWalkPath_imageView_contentDescription" translatable="false">this is watch walk attendee walk path imageView</string>
    <string name="walkInviteGroup_startReaminTime_format" formatted="false" translatable="false">%02d:%02d</string>
    <string name="walkInviteGroup_willStartSoon">即将开始</string>
    <string name="walkInviteGroup_isInvalid">约走已失效</string>
    <string name="title_activity_withinGroupCompeteInviteInfo_setting">WithinGroupCompeteInviteInfoSettingActivity</string>
    <string name="withinGroupCompeteInviteInfoSetting_activity_title">安排组内竞赛</string>
    <string name="withinGroupCompeteInvite_inviterNickname">我</string>
    <string name="withinGroupCompete_inviteAttendee_operateGridViewItem_icon_contentDescription" translatable="false">this is within group compete invite attendee operate gridView item icon imageView</string>
    <string name="withinGroupCompete_inviteInfo_topic_label">组内竞赛主题：</string>
    <string name="withinGroupCompete_inviteInfo_durationTime_label">组内竞赛时长：</string>
    <string name="withinGroupCompete_inviteInfo_durationTime_unit">分钟</string>
    <string name="withinGroupCompete_inviteInfo_durationTime_textView_hint">给竞赛一个时长吧!</string>
    <string name="withinGroupCompete_inviteInfo_durationTime_format">您选择的组内竞赛时长为 %d 分钟</string>
    <string name="title_activity_withinGroupCompete_invitee_select" translatable="false">WithinGroupCompeteInviteeSelectActivity</string>
    <string name="cancel_selectWithinGroupCompeteInvitee_barbtnitem_title">取消</string>
    <string name="withinGroupCompeteInviteeSelect_activity_title">选择竞赛对手</string>
    <string name="personalPedometer_historyInfo_segment_title">个人数据</string>
    <string name="walkInviteGroup_historyInfo_segment_title">约走</string>
    <string name="withinGroupCompeteGroup_historyInfo_segment_title">组内竞赛</string>
    <string name="strangerPat_historyInfo_segment_title">拍肩</string>
    <string name="personalWalkHistoryRecordItem_indicator_imageView_contentDescription" translatable="false">this is personal walk history record item indicate imageView</string>
    <string name="personalWalkHistoryRecord_walkTotalStep_label">总步数</string>
    <string name="personalWalkHistoryRecord_walkTotalDistance_label">总里程</string>
    <string name="personalWalkHistoryRecord_walkEnergy_label">大卡</string>
</resources>