<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".user.info.setting.UserInfoSettingActivity"
    tools:ignore="MergeRootFrame" >

    <ListView
        android:id="@+id/uis_userInfo_listView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/common_form_bg"
        android:cacheColorHint="@android:color/transparent"
        android:fadingEdge="none"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false"
        android:listSelector="@android:color/transparent"
        android:padding="1dp"
        android:scrollbars="none" >
    </ListView>

    <RelativeLayout
        android:id="@+id/uis_userStepLength_relativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_below="@id/uis_userInfo_listView"
        android:layout_marginTop="30dp"
        android:background="@drawable/usersteplength_relativelayout_bg"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" >

        <ImageView
            android:id="@+id/uis_userStepLength_indicator_imageView"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/userStepLength_indicator_imageView_contentDescription"
            android:scaleType="centerCrop"
            android:src="@drawable/img_item_indicator"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/uis_userStepLength_indicator_imageView" >

            <Switch
                android:id="@+id/uis_userStepLength_calculate_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:checked="true"
                android:textOff="@string/userStepLength_manualCalculate_text"
                android:textOn="@string/userStepLength_autoCalculate_text" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/uis_userStepLength_calculate_switch"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ellipsize="middle"
                    android:gravity="left|center_vertical"
                    android:singleLine="true"
                    android:text="@string/userStepLength_label_textView_text"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/uis_userStepLength_textView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="2"
                    android:ellipsize="end"
                    android:gravity="right|center_vertical"
                    android:hint="@string/userStepLength_notSet"
                    android:singleLine="true"
                    android:textColor="@color/dark_gray"
                    android:textSize="16sp" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>